fix some route